# manganarrator_contracts

./: README.md  package-lock.json  package.json  test.mjs
_consumer_test/: package-lock.json  package.json  test.ts  tsconfig.json
cfg/: tts_emotions.yaml
python/: README.md  pyproject.toml
python/mn_contracts/: common.py  ocr.py  pcc_backend.py  tts.py  tts_cfg.py  video.py
python/mn_contracts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: generate_tts_cfg.py
ts/mn_contracts/: package.json  tsconfig.json
ts/mn_contracts/src/: index.ts  ocr.ts  pcc_backend.ts  tts.ts  tts_cfg.ts  video.ts
